# AutoExplainML

./: .env   .gitignore  Dockerfile  LICENSE  README.md  api.py  docker-compose.yml  pyproject.toml  report.html  requirements.txt  streamlit_app.py
.github/workflows/: publish.yml
autoexplainml/: explainer.py
autoexplainml_outputs/: result.json
backend/: api.py
examples/: cv_example.py  deep_learning_example.py  tabular_example.py
frontend/: app.py
saas/api/: app.py
saas/auth/: auth.py  dependencies.py  jwt_handler.py
saas/db/: database.py  models.py
saas/jobs/: celery_app.py  job_manager.py  job_tasks.py  tasks.py  worker.py
saas/queue/: celery_app.py
saas/storage/: storage.py
saas/ui/: app.py
saas/workers/: celery_app.py  tasks.py
scripts/: check_dependencies.py  safe_install_check.py
src/autoexplainml/: __init__.py  __main__.py
src/autoexplainml.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/autoexplainml/analyzer/: analyze.py
src/autoexplainml/api/: app.py  service.py
src/autoexplainml/cli/: main.py
src/autoexplainml/computer_vision/: gradcam.py
src/autoexplainml/core/: auto_detect.py  engine.py  explainer.py  feature_cleaner.py  pipeline.py  preprocessing.py  registry.py  safe_preprocessing.py  validator.py
src/autoexplainml/deep_learning/: dl_explainer.py
src/autoexplainml/explainers/: base.py  lime_explainer.py  permutation_explainer.py  shap_explainer.py
src/autoexplainml/fairness/: metrics.py
src/autoexplainml/intelligence/: correlation.py  data_quality.py  fairness.py  leakage.py  reasoning.py
src/autoexplainml/pipelines/: explain_pipeline.py
src/autoexplainml/product/: project_mode.py
src/autoexplainml/reporting/: build_report.py  export_html.py  export_pdf.py  html_dashboard.py  report_builder.py
src/autoexplainml/visualization/: dashboard.py  heatmaps.py  plots.py  shap_plots.py  shap_viz.py  waterfall.py
tests/: conftest.py  test_auto_detect.py  test_cli_api.py  test_engine.py  test_explainers.py  test_intelligence.py  test_pipeline.py  test_reporting.py  test_validator.py
