[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autoexplainml"
version = "1.1.1"
description = "Production-grade Explainable AI framework"
authors = [{ name = "Sidhant Narang" }]
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "shap",
    "fastapi",
    "uvicorn",
    "matplotlib"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]