[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autoexplainml"
version = "2.0.0"
description = "A modular Explainable AI framework for ML, Deep Learning, and Computer Vision"
readme = "README.md"
requires-python = ">=3.9"

authors = [
    { name = "Sidhant Narang" }
]

license = { text = "MIT" }

dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "matplotlib"
]

keywords = [
    "machine-learning",
    "explainable-ai",
    "ml",
    "deep-learning",
    "computer-vision",
    "shap"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

[project.optional-dependencies]

# =========================
# Machine Learning Stack
# =========================
ml = [
    "xgboost",
    "lightgbm",
    "catboost",
    "seaborn",
    "statsmodels",
    "scipy"
]

# =========================
# Deep Learning Stack
# =========================
dl = [
    "torch",
    "torchvision",
    "torchaudio",
    "tensorflow",
    "keras",
    "h5py"
]

# =========================
# Computer Vision Stack
# =========================
cv = [
    "opencv-python",
    "scikit-image",
    "Pillow",
    "imageio",
    "albumentations"
]

# =========================
# Explainability Stack
# =========================
xai = [
    "shap",
    "lime",
    "eli5"
]

# =========================
# Full Advanced Stack
# =========================
full = [
    "xgboost",
    "lightgbm",
    "catboost",
    "seaborn",
    "statsmodels",
    "scipy",
    "torch",
    "torchvision",
    "torchaudio",
    "tensorflow",
    "keras",
    "h5py",
    "opencv-python",
    "scikit-image",
    "Pillow",
    "imageio",
    "albumentations",
    "shap",
    "lime",
    "eli5"
]

# =========================
# Development Tools
# =========================
dev = [
    "pytest",
    "black",
    "flake8",
    "mypy",
    "isort"
]

[project.urls]
Homepage = "https://github.com/SIDHANT036/AutoExplainML"
Repository = "https://github.com/SIDHANT036/AutoExplainML"
Issues = "https://github.com/SIDHANT036/AutoExplainML/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]