[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autoexplainml"
version = "4.0.1"
description = "A modular Explainable AI framework for ML, Deep Learning, and Computer Vision"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9"

authors = [
    { name = "Sidhant Narang" }
]

license = { text = "MIT" }

dependencies = [
    "numpy>=1.23,<2.0",
    "pandas>=1.5,<3.0",
    "scikit-learn>=1.2,<2.0",
    "matplotlib>=3.6,<4.0"
]

keywords = [
    "machine-learning",
    "explainable-ai",
    "ml",
    "interpretability",
    "shap",
    "lime",
    "ai",
    "auto-ml",
    "education"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

# =========================
# OPTIONAL DEPENDENCIES
# =========================
[project.optional-dependencies]

# -------------------------
# Machine Learning Stack
# -------------------------
ml = [
    "xgboost>=1.7,<3.0",
    "lightgbm>=4.0,<5.0",
    "catboost>=1.2,<2.0",
    "seaborn>=0.12,<1.0",
    "statsmodels>=0.14,<1.0",
    "scipy>=1.10,<2.0"
]

# -------------------------
# Deep Learning (PyTorch)
# -------------------------
dl_torch = [
    "torch",
    "torchvision",
    "torchaudio"
]

# -------------------------
# Deep Learning (TensorFlow - ISOLATED USE)
# -------------------------
dl_tf = [
    "tensorflow>=2.12,<3.0",
    "keras>=2.12,<3.0",
    "h5py>=3.8,<4.0"
]

# -------------------------
# Computer Vision
# -------------------------
cv = [
    "opencv-python>=4.7,<5.0",
    "scikit-image>=0.20,<1.0",
    "Pillow>=9.0,<12.0"
]

# -------------------------
# Explainability Core
# -------------------------
xai = [
    "shap>=0.41,<1.0",
    "lime>=0.2,<1.0",
    "eli5>=0.13,<1.0"
]

# -------------------------
# SAFE FULL STACK (NO DL)
# -------------------------
full = [
    "xgboost>=1.7,<3.0",
    "lightgbm>=4.0,<5.0",
    "catboost>=1.2,<2.0",
    "seaborn>=0.12,<1.0",
    "statsmodels>=0.14,<1.0",
    "scipy>=1.10,<2.0",
    "shap>=0.41,<1.0",
    "lime>=0.2,<1.0",
    "eli5>=0.13,<1.0"
]

# -------------------------
# DEVELOPMENT
# -------------------------
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
    "isort>=5.0"
]

[project.urls]
Homepage = "https://github.com/SIDHANT036/AutoExplainML"
Repository = "https://github.com/SIDHANT036/AutoExplainML"
Issues = "https://github.com/SIDHANT036/AutoExplainML/issues"

# =========================
# CLI ENTRY POINT (ADDED)
# =========================
[project.scripts]
autoexplainml = "autoexplainml.cli.main:main"

# =========================
# SETUPTOOLS CONFIG
# =========================
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"]


